{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 13,
  "lineage": "7a203ed3-3604-0b94-eef8-0b0d2327fbc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:655463642124:instance/i-061e755856b79c7b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061e755856b79c7b3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CommonKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c35a6e635d5b81fa",
            "private_dns": "ip-10-1-1-54.ec2.internal",
            "private_ip": "10.1.1.54",
            "public_dns": "ec2-54-166-233-64.compute-1.amazonaws.com",
            "public_ip": "54.166.233.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f8b67a245123d54b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073ca0ed189613ed5",
            "tags": {
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-1",
              "Owner": "KJ"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a8b3fb53570e557"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:internet-gateway/igw-09913e6787a16e992",
            "id": "igw-09913e6787a16e992",
            "owner_id": "655463642124",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e65aee19c8906ae7",
            "owner_id": "655463642124",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09913e6787a16e992",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097d96edd2db59699",
            "route_table_id": "rtb-0e65aee19c8906ae7",
            "subnet_id": "subnet-073ca0ed189613ed5"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d56a460e81a4246",
            "route_table_id": "rtb-0e65aee19c8906ae7",
            "subnet_id": "subnet-0ef5bd64a49b15b22"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a204b98b27f0cf42",
            "route_table_id": "rtb-0e65aee19c8906ae7",
            "subnet_id": "subnet-0c943c11b7a737f16"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:security-group/sg-04a8b3fb53570e557",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8b3fb53570e557",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "655463642124",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:subnet/subnet-073ca0ed189613ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-073ca0ed189613ed5",
            "map_public_ip_on_launch": true,
            "owner_id": "655463642124",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-1"
            },
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:subnet/subnet-0ef5bd64a49b15b22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0ef5bd64a49b15b22",
            "map_public_ip_on_launch": true,
            "owner_id": "655463642124",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-2"
            },
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:subnet/subnet-0c943c11b7a737f16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0c943c11b7a737f16",
            "map_public_ip_on_launch": true,
            "owner_id": "655463642124",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-3"
            },
            "vpc_id": "vpc-02f93489ad07d6dad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655463642124:vpc/vpc-02f93489ad07d6dad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c313d1c611637af9",
            "default_route_table_id": "rtb-02bd18000d7ff6ba6",
            "default_security_group_id": "sg-09d2ae9b77ae6486f",
            "dhcp_options_id": "dopt-dc2650a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02f93489ad07d6dad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bd18000d7ff6ba6",
            "owner_id": "655463642124",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "KJ"
            }
          }
        }
      ]
    }
  ]
}